--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <button type="button" name="button" id= "B3"></button>
       <button type="button" name="button" id= "B4"></button>
       <button type="button" name="button" id= "B5"></button>
+      <button type="button" name="button" id= "B6"></button>
+      <button type="button" name="button" id= "B7"></button>
+      <button type="button" name="button" id= "B8"></button>
+      <button type="button" name="button" id= "B9"></button>
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
