--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
       <button type="button" name="button" id= "B8"></button>
       <button type="button" name="button" id= "B9"></button>
       <button type="button" name="button" id= "B10"></button>
-
+    </div>
+    <div class="color-quote">
+      <p id="custom-quote">Click on a color to get a quote!</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
