--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="title">
       <h1>Color Full</h1>
-      <p>How are you feeling?</p>
+      <h3>How are you feeling?</h3>
     </div>
 
     <div class="buttons">
