--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <button type="button" name="button" id= "B10"></button>
 
     </div>
+    <div class="RandomButton">
+      <button type="button" name="button" id="rainbow"></button>
+
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script type="text/javascript" src="main.js"></script>
   </body>
